--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
+.circle{
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  background-color: red;
+}
+.button{
+  padding: 10px;
+  border-radius: 5px;
+  outline: none;
+  display: block;
+  margin: 3px;
+}
+.box-1{
+  border: 2px solid black;
+  width: fit-content;
+  padding: 10px;
+  border-radius: 20px;
+  margin: auto;
+}
+.value-box{
+  margin: auto;
+  width:fit-content ;
+}
+.text-center{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.primarybg{
+  background-color:rgb(215, 213, 216) ;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.secondrybg{
+  background-color:rgb(227, 12, 12) ; 
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.h100vh{
+  height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
+.w100vw{
+  width: 100vw;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.block{
+  display: block;
+}
+.w-fit{
+  width: fit-content;
+}
+.w-full{
+  width: 100vw;
+}
+.custom-width {
+  width: 100vw;
+  height: 40vh;
+  object-fit: cover;
 }
